tests/negative/typechecker_bad16.sp


break: Void();

bad:Int (num:Int, b: String) {
  return 0;
}

main: Int () {

    a: [[Int]] = 0;
    return 0;
}